<resources>
    <string name="app_name">CurVision</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="intro_title_1">Indicate Approaching\nVehicle</string>
    <string name="intro_des_1">Foresee approaching vehicle in\nblind curve area</string>
    <string name="intro_title_2">Locate Blind\nCurve Risk</string>
    <string name="intro_des_2">Provides alarm and indicator system\nin terms of possible hazard</string>
    <string name="intro_title_3">Monitor\nSpeed (kmph)</string>
    <string name="intro_des_3">Track vehicle speed</string>
    <string name="h1">Innovation meets\nsafety with\nCurVision</string>
    <string name="p1">CurVision, an app that will serve as your vision\nto blind curve areas</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_here">Login Here</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back you’ve\nbeen missed!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="or_continue_with">or continue with</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account_to_enjoy_riding_with_safety_precautions">Create an account to enjoy riding with safety precautions</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome">Welcome,</string>
    <string name="todo">TODO</string>
    <string name="approaching_vehicles">List of <b>Approaching Vehicles</b></string>
    <string name="history_of_accidents">Accident History</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="cdrrmo_danao_city">CDRRMO-Danao City</string>
    <string name="_0930_822_7211">Call : 0930 822 7211</string>
    <string name="safety_precautions">Safety Precautions</string>
    <string name="sp1"><b>Reduce Speed:</b> Slow down before\nentering the blind curve.</string>
    <string name="sp2"><b>Stay in Your Lane:</b> Always stay in\nyour lane while navigating a blind\ncurve.</string>
    <string name="sp3"><b>Keep a Safe Distance:</b> Maintain a\nsafe distance from the vehicle in\nfront of you, allowing ample time to\nstop or maneuver if needed.</string>
    <string name="sp4"><b>Look Ahead:</b> Try to anticipate the\ncurvature of the road by looking as\nfar ahead as possible.</string>
    <string name="sp5"><b>Stay Sober:</b> Never drive under the\ninfluence of alcohol or drug.</string>
    <string name="t1"><b>1 Died in a 5-vehicle Sogod Road Collision</b></string>
    <string name="sp6"><b>Watch for Warning Signs:</b> Pay attention to any warning signs indicating the presence of blind curves ahead.</string>
    <string name="t2"><b>Sogod accident: 2 injured after SUV driver falls asleep</b></string>
    <string name="ah2">CEBU CITY, Philippines – Two persons were injured in a vehicular accident that happened along the national highway in Barangay Liki in Sogod, Cebu on Sunday morning, June 11.
        \n\nAccording to the police, the accident happened after the driver of a sports utility vehicle (SUV) fell asleep, encroached the opposite lane of the national highway, and hit an approaching pickup truck.
        \n\nThe pickup truck driver, who was identified as Cerilo Villarba, 65, and his companions, Kevin Gonzales, 30, suffered injuries on their legs and head from the impact, according to Police Staff Sergeant Dennis Pepito, traffic investigator of the Sogod Police Station.
        \n\nPepito said SUV driver Bonifacio Bilongilot Jr., 64 and a resident of Angeles City, Pampanga, was traveling from Cebu City to Tabuelan town when the accident happened at 7:45 a.m.</string>
    <string name="d1">Thurday, December 1, 2022 at 12:00AM</string>
    <string name="d2">Sunday, June 11, 2023 at 6:30PM</string>
    <string name="see_more">see more</string>
    <string name="list">List of Approaching Vehicles</string>
    <string name="call">CALL</string>
    <string name="drive_catiously">D r i v e  ||  C a t i o u s l y</string>
    <string name="ah3"> On the other hand, Villarba was travelling from Tuburan town on its way to Carmen town in northern Cebu.
        \n\nVillarba is a resident of Barangay Dawis Norte in Carmen town.
        \n\nAccording to Pepito, Villarba and Gonzales were brought to the Sogod District Hospital for the treatment of their injuries.  His attending physician has recommended for Villarba’s transferred to a hospital in Cebu City.
        \n\nPepito said that during their investigation, Bilongilot admitted that he fell asleep while driving his SUV, the reason for the accident.
        \n\nThe driver also made the same admission when he spoke to Villarba’s daughter, Jeslyn Tero, when she arrived at the site of the accident, Pepito added.
        \n\nDuring their conversation, Bilongilot, according to Pepito made an offer that they settle amicably with a promise to shoulder Villarbas’ medical bills, including that of Gonzales.
        \n\nBilongilot, Pepito said, also made a promise to pay for the damages that he caused on Villarba’s vehicle.
        \n\nPepito said that Tero has decided to accept Bilongilot’s offer on her father’s behalf.
        \n\nSogod town is located approximately 60 kilometers north of Cebu City.</string>
    <string name="t3"><b>Tanod dies, several injured in multiple vehicle collision in Sogod</b></string>
    <string name="d3"><b>Wednesday, November 30, 2022 at 9:40PM</b></string>
    <string name="ah4">A BARANGAY tanod died while several others got injured in a multiple vehicle collision in Barangay Liki, Sogod town, northern Cebu on Wednesday at 11:10 a.m., November 30.
        \n\nThe 66-year-old barangay tanod of Liki, Garlito Dela Cerna, was standing along the roadside when he was hit by a Ceres Bus driven by Dindo Dizon, 47, of Tabuelan town.
        \n\nHe was rushed to Sogod hospital but declared dead later at 2 p.m.
        \n\nDindo was reportedly traveling towards Cebu City when he slowed down and applied a brake to give way to a Geely vehicle driven by Benny Lumapas, of Barangay Polpogan, Consolacion town, but was hit instead by the speeding another passenger bus, Autobus, driven by Joseph Rabadan, of Barangay Pitogo, Consolacion who was following him.
        \n\nThe impact sent the Ceres bus to unknown direction and eventually ploughed a house along the roadside.
        \n\nRabadan also hit the Geely sports utility vehicle, causing a domino effect that also damaged a Toyota Hilux pick-up maneuvered by Roy Boocz of Sta. Fe town in northern Cebu and a boom truck driven by Arnel Rom of Barangay Pitogo, Consolacion.
        \n\n"Paglihay sa Ceres Bus, diretso sa pagbrake ang driver unya kusog man ang nagsunod nga Autobus maayong pagkadaro," Sogod Police Station chief Lieutenant Phil Restauro said in an interview with SunStar Cebu.
        \n\n(The Ceres Bus evaded and its driver immediately applied a brake, but the Autobus that was running very fast ploughed the bus ahead).
        \n\nThe injured passengers were:\nPorferio Guerrero Pabuaya, 64, of Ubay, Bohol;\nJohn Clourenz Lumingkit, 22, single, of Barangy Dakit, Sogod;\nAlexis Karyle Lumingkit Flores, 17, of Barangay Dakit; \nCheraime Mondejar Magpuyo,19, of Barangay Tuminhaw, Tuburan town;\nApril Kyle Latorre, 18, single, of Barangay Liki;\nDindo Dizon, 47, driver of Ceres Bus.
        \n\nThe passengers only sustained minor injuries.
        \n\nRestauro said several road accidents have already been recorded in the area because there is a portion there that has downhill and blind curves.
        \n\nThe drivers of vehicles involved are temporarily placed under the custody of Sogod Police Station.
        \n\nBased on their investigation, the police found out that the driver of Autobus was the one at fault.</string>
    <string name="t4"><b>Lolo killed, 11 others injured in Sogod, Cebu accident</b></string>
    <string name="ah5">(UPDATED) CEBU CITY, Philippines — A senior citizen died after his house was rammed by a bus involved in a five-vehicle smashup along the national road in Barangay Liki in Sogod town on Wednesday, November 30, 2022.
        \n\nEleven others were also injured in the vehicular accident that happened around 11 a.m.
        \n\nSogod Mayor Lissa Marie Durano-Streegan confirmed in her post the death of Garlito dela Cerna, 66, a resident of Barangay Liki.
        \n\nDela Cerna was inside his house when it was rammed by a bus that was also involved in a multiple-vehicle accident that included an Autobus, A Ceres bus, a Geely Coolray SUV, a Toyota Hilux pickup truck, and an Isuzu Boom Truck.</string>
    <string name="loc_des">CEBU, Philippines —  At least five vehicles were involved in a mid-day collision yesterday along the road in Barangay Liki, Sogod, Cebu, which resulted in one death.
        \n\nPolice Lieutenant Phil Restauro, chief of the Sogod Police Station, told reporters that the incident included an Autobus, two bus liners, including a medium-sized Ceres bus, an SUV, and a cargo truck.</string>
    <string name="loc_des2"> While some of those who were involved in the accident got minor injuries only, an old man identified as Garlito dela Cerna, who was just resting inside his house, died in the incident after one of the buses rammed into their house.
        \n\nRestauro said the incident is still under investigation, and possible cases of reckless driving resulting in homicide and damage to properties might be filed once the culprit of the collision is verified.</string>
    <string name="loc_des3"> According to the initial reports they had gathered, the autobus, SUV, and cargo truck were heading towards Northern Cebu (upwards) while the Ceres bus liners were going to Cebu City (downwards).
    \n\nHe said the SUV overtook the queue heading towards a blind curve, which the Ceres bus gave way.</string>
    <string name="loc_des4">Then, the autobus that came speedily was unable to hit its brake on time and crashed into the Ceres bus back portion, resulting in multiple collisions.
    \n\n"Mao to ang Ceres ming padulong didto sa balay nya kadtung auto bus ming bangga pud sa kadtung auto nga gi lugwayan sa Ceres. Mao to napakung pakung na ang dagan kay gasunod gud," said Restauro.
    \n\nIn a statement issued on Wednesday, Sogod Mayor Lissa Marie "Moonyeen" Durano-Streegan said she was saddened by the incident.
    \n\nThe mayor urged motorists to be careful when driving, to prevent from any road mishaps. — Robhe Jane C. Yara, GAN (FREEMAN) </string>
    <string name="loc">Barangay Liki, Sogod, Cebu</string>
    <string name="loc2">Central Nautical Hwy, Cebu</string>
    <string name="loc3">10.796449, 123.994576</string>
    <string name="loc4">Known as \'The Lethal Road\', this stretch has witnessed numerous fatal accidents, its sharp curves and hidden hazards making it a perilous passage. Despite its scenic allure, it demands utmost caution from drivers, as its treacherous twists offer little room for error.</string>
</resources>