<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="NestedWeights"
    android:orientation="vertical"
    android:background="@color/bg">



    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/cv_logo"
        android:layout_height="80dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#414042"
            android:fontFamily="sans-serif-medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p1"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="#414042"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/bg"
                android:textSize="18sp"
                app:backgroundTint="#680216"
                android:elevation="3dp"
                android:fontFamily="sans-serif-medium"/>




        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">


            <TextView
                android:id="@+id/registerButton"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="#F6B923"
                android:elevation="3dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextSizeCheck" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>